# rust-opengl-playground

./: Cargo.toml
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs
src/render_gl/: data.rs  shader.rs
